--- a/css/chenyu.css
+++ b/css/chenyu.css
@@ -338,6 +338,7 @@
 		}
 .cyprog{
 	height: 7px;
+	width: 98%
 	background: #e3e3e3;
 	border-radius: 0;
 	box-shadow: none;
@@ -385,7 +386,7 @@
 	background: #fff;
 	position: absolute;
 	right: -5px;
-	top: -6px;
+	top: -12px;
 		}
 .cyprog .cyprog-value{
 	width: 45px;
@@ -400,7 +401,7 @@
 	text-align: center;
 	position: absolute;
 	bottom: 30px;
-	right: -17px;
+	right: -10px;
 		}
 .cyprog .cyprog-value:after{
 	content: "";
