--- a/css/hjbj.css
+++ b/css/hjbj.css
@@ -104,7 +104,7 @@
 
 @media (min-width:768px) {
 	.footer-fav .site-fav .btn-orange {
-		padding: 0 2em;
+		padding: 0 1.5em;
 		color: #fff;
 		font-size: 1pc;
 		line-height: 3.5
@@ -151,7 +151,7 @@
 }
 
 .footer-fav .site-girl .girl-info {
-	margin-bottom: 55px;
+	margin-bottom: 38px;
 	margin-left: 150px
 }
 
@@ -198,13 +198,12 @@
 	outline: 0;
 	border: none;
 	border-radius: 3px;
-	background: #746afc;
+	background: var(--theme);
 	color: #fff;
 	text-align: center;
 	line-height: 2.4;
 	cursor: pointer
 }
-/*尘遇 底部收藏*/
 
 @media (max-width: 1210px) {
     .chenyuyc {
