--- a/jcweb/time/webtime/webstyle.css
+++ b/jcweb/time/webtime/webstyle.css
@@ -174,7 +174,7 @@ ul#lsninline {
 	top:434px;
 	width:771px;
 	height:65px;
-	background-image:url('https://cdn.jsdelivr.net/gh/cy-j/chenyu/logo.png');
+	background-image:url('https://cdn.chenyu.me/gh/cy-j/chenyu/logo.png');
 	background-repeat:no-repeat
 }
 
